fix(app): table corner so the content is not visible in the corner while scrolling

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -19,7 +19,6 @@
     top: 0;
     font-size: 18px;
     font-weight: 700;
-    border-radius: 10px 0 0 0;
     background: linear-gradient(
         0deg,
         rgba(255, 255, 255, 0.9),
